sql/test/unit/checks/reactive_view_fail.exp
CREATE TABLE IF NOT EXISTS test(x integer);
^
|
 ----- ERROR
Error: line 1, character 0:
Failed constraint: x > 0
